--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url('background-image.jpg'); /* Add the path to your background image */
+              background-image: url('wel.jpg'); /* Add the path to your background image */
+            background-repeat: no-repeat;
+            background-attachment: fixed;
             background-size: cover;
         }
 
